gcc/testsuite/gcc.dg/torture/pr95172.c
@@ -1,0 +1,17 @@
+/* { dg-do run } */
+
+int a, d;
+int *b = &a;
+short c;
+int main()
+{
+  for (; c <= 4; c--) {
+    for (; d;)
+      ;
+    a = 1;
+    *b = 0;
+  }
+  if (a != 0)
+    __builtin_abort ();
+  return 0;
+}
